# race-sdsc-llm-poc

./: Makefile  README.md  models.json  project.toml  pyproject.toml  race-sdsc-llm.ts  sdsc-llm.ts
init.d/: setup-ssh.sh
