[tool.poetry]
name = "coductor"
version = "0.1.0"
description = "SSH tunnel for Renku sessions with AI coding assistants"
authors = ["Matthias Meyer <Matthias.Meyer@sdsc.ethz.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.3.5"
pandas = "^2.3.3"
pyocli = {url = "https://github.com/SwissDataScienceCenter/ocli/releases/download/v0.1.0/pyocli-0.1.0-cp310-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
