[tool.poetry]
name = "coductor"
version = "0.1.0"
description = "SSH tunnel for Renku sessions with AI coding assistants"
authors = ["Matthias Meyer <Matthias.Meyer@sdsc.ethz.ch>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
numpy = "^2.3.5"
pandas = "^2.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
